# turbo-computing-machine

./: .cruft.json  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  DOCS.yml  FEATURE-REQUEST.yml
.github/workflows/: commit-ci.yml  daily-scheduled-ci.yml  docs.yml  pr-ci.yml  pre-release.yml  release.yml
conda.recipe/: meta.yaml
docs/: contributing.md  installation.md
docs/api/: cli.md
examples/: 01_intro_to_yuhao_python_template_trial.ipynb
requirements/: dev.txt
tests/: __init__.py  test_yuhao_python_template_trial.py
yuhao_python_template_trial/: __init__.py  cli.py
