

[tool.pytest.ini_options]
minversion = "6.0"
# opts:
# `--strict-markers` - Raise error on unexpected pytest markers being used (add new markers to `markers` config)
# `-n2` - parallelise over two threads (uses pytest-xdist)
# `--nbmake --nbmake-kernel=yuhao_python_template_trial` - test example notebooks using the "yuhao_python_template_trial" notebook kernel (uses nbmake)
# `--cov --cov-report=xml --cov-config=pyproject.toml` - generate coverage report for tests (uses pytest-cov; call `--no-cov` in CLI to switch off; `--cov-config` include to avoid bug)
# `-m 'not high_mem'` - Do not run tests marked as consuming large amounts of memory (call `-m "high_mem"` in CLI to invert this; only `high_mem` marked tests will be run)
# `-p no:memray` - Do not use the memray memory profiling plugin (call `-p memray` in CLI to switch on memory profiling)
addopts = "-rav --strict-markers -n2 --nbmake --nbmake-kernel=yuhao_python_template_trial --cov --cov-report=xml --cov-config=pyproject.toml -m 'not high_mem' -p no:memray"
testpaths = ["tests", "examples"]
# to mark a test, decorate it with `@pytest.mark.[marker-name]`
markers = ["high_mem", "limit_memory"]
filterwarnings = [
    # https://github.com/pytest-dev/pytest-xdist/issues/825
    "ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["yuhao_python_template_trial/"]

[tool.coverage.report]
fail_under = 89

[tool.coverage.html]
directory = "reports/coverage"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

[tool.black]
line-length = 100
skip_magic_trailing_comma = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "Q"]

ignore = [
    "E501", # line too long: Black will handle this.
    "D1",   # Ignore missing docstrings in public functions/modules. There are just too many of them missing...
]

# Exclude a variety of commonly ignored directories.
exclude = [".*", "__pypackages__", "build", "dist", "venv", "reports/"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

# Ignore `E402` (import violations) and `F401` (unused imports) in all `__init__.py` files
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"*.ipynb" = ["E402"]

# Ignore `E402` for all notebooks
[tool.nbqa.addopts]
ruff = ["--extend-ignore=E402"]
[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.setuptools.packages.find]
include = ["yuhao_python_template_trial*"]

[tool.setuptools.package-data]
# Add file globs from the source code directory if they include non-py files that should be packaged
# E.g. "fixtures/**/*"
yuhao_python_template_trial = []


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
    ]

name = "yuhao_python_template_trial"
authors = [
    { name = "yuhao sun", email = "syhwawa@gmail.com" },
]
maintainers = []
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["yuhao_python_template_trial"]
license = { text = "MIT" }
dynamic = ["dependencies", "optional-dependencies"]
version = "0.1.0"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/base.txt"] }
[project.scripts]
yuhao_python_template_trial="yuhao_python_template_trial.cli:cli"

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements/dev.txt"] }

[project.urls]
repository = "https://github.com/syhwawa/yuhao_python_template_trial"
documentation = "https://syhwawa.github.io/yuhao_python_template_trial"
changelog = "https://github.com/syhwawa/yuhao_python_template_trial/blob/main/CHANGELOG.md"
